[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quesen-langchain"
version = "0.1.0"
description = "Official LangChain / LangGraph tool wrapper for Quesen — deterministic A2A risk validation."
authors = [{ name = "Senueren Bureau" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["quesen", "langchain", "langgraph", "a2a", "agents", "risk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]
dependencies = [
  "quesen-sdk>=0.1.0",
  "langchain-core>=0.3.0,<0.4.0",
]

[project.urls]
Homepage = "https://senueren.co.za/quesen"
Source = "https://github.com/Shxnque/quesen-langchain"

[project.optional-dependencies]
dev = ["pytest>=8.0", "langchain>=0.3,<0.4"]

[tool.setuptools.packages.find]
include = ["quesen_langchain*"]
